--- a/Habitual/app/src/main/res/layout/goals_fragment.xml
+++ b/Habitual/app/src/main/res/layout/goals_fragment.xml
@@ -7,8 +7,43 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Goals Fragment"
+        android:text="My Goals"
         android:textSize="30dp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Add New Goal"
+        android:textSize="18sp" />
+
+    <ImageButton
+        android:id="@+id/add_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="start"
+        android:background="@color/tabIndicatorColor"
+        android:clickable="true"
+        android:src="@drawable/ic_add" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Remove Entry"
+        android:layout_gravity="start"
+        android:textSize="18sp" />
+
+    <android.support.v7.widget.AppCompatImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_clear"
+        android:background="@color/tabIndicatorColor"
+        android:layout_gravity="start"/>
+
+
+    <ListView
+        android:id="@+id/goals_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
