--- a/Habitual/app/src/main/res/values/colors.xml
+++ b/Habitual/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="colorPrimaryDark">#0288D1</color>
     <color name="colorAccent">#FF4081</color>
     <color name="tabTextColor">#fff</color>
-    <color name="tabIndicatorColor">#2d2d2d</color>
+    <color name="tabIndicatorColor">#2D2D2D</color>
 </resources>
