--- a/Habitual/app/src/main/res/layout/add_new_goal_dialog.xml
+++ b/Habitual/app/src/main/res/layout/add_new_goal_dialog.xml
@@ -5,15 +5,26 @@
 
     <EditText
         android:id="@+id/goalTitle"
-        android:hint="Goal Title"
+        android:hint="Assignment Title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <EditText
         android:id="@+id/goalDescription"
-        android:hint="Goal Description"
+        android:hint="Assignment Description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/goalTitle"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"/>
+
+    <EditText
+        android:id="@+id/dueDate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/goalDescription"
+        android:ems="10"
+        android:hint="Due date"
+        android:inputType="date" />
+
+
 </RelativeLayout>
