--- a/Habitual/app/src/main/res/layout/logging_fragment.xml
+++ b/Habitual/app/src/main/res/layout/logging_fragment.xml
@@ -7,7 +7,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="My Journal"
+        android:text="My Notes"
         android:textSize="30dp"
         android:textStyle="bold" />
 
