--- a/Habitual/app/src/main/res/layout/progress_fragment.xml
+++ b/Habitual/app/src/main/res/layout/progress_fragment.xml
@@ -8,7 +8,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="My Progress"
+        android:text="My Academic Calendar"
         android:textSize="30dp"
         android:textStyle="bold" />
 
