--- a/Habitual/app/src/main/res/layout/logging_fragment.xml
+++ b/Habitual/app/src/main/res/layout/logging_fragment.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="100dp"
+    android:background="@color/colorPrimaryDark"
     android:gravity="center">
 
     <TextView
@@ -9,13 +10,21 @@
         android:layout_height="wrap_content"
         android:text="My Notes"
         android:textSize="30dp"
+        android:textColor="@color/tabTextColor"
         android:textStyle="bold" />
+
+    <LinearLayout
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:padding="15px"
+        android:orientation="horizontal">
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Add New Entry"
+        android:textColor="@color/tabTextColor"
         android:textSize="18sp" />
 
     <android.support.v7.widget.AppCompatImageButton
@@ -25,22 +34,13 @@
         android:src="@drawable/ic_add"
         android:layout_gravity="start"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Remove Entry"
-        android:layout_gravity="start"
-        android:textSize="18sp" />
-
-    <android.support.v7.widget.AppCompatImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_clear"
-        android:background="@color/tabIndicatorColor"
-        android:layout_gravity="start"/>
+    </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="@color/tabTextColor"
+        android:padding="4dp"
+        android:scrollbars="vertical"/>
 
 </LinearLayout>
