--- a/Habitual/app/src/main/res/layout/progress_fragment.xml
+++ b/Habitual/app/src/main/res/layout/progress_fragment.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="100dp"
+    android:background="@color/colorPrimaryDark"
     android:gravity="center">
 
     <TextView
@@ -10,19 +11,27 @@
         android:layout_height="wrap_content"
         android:text="My Academic Calendar"
         android:textSize="30dp"
+        android:textColor="@color/tabTextColor"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
+    <LinearLayout
         android:layout_height="wrap_content"
-        android:text="Goal 1:"
-        android:textSize="20sp" />
+        android:layout_width="wrap_content"
+        android:padding="15px"
+        android:orientation="horizontal">
+
+        <android.support.v7.widget.AppCompatButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add a reminder"/>
+    </LinearLayout>
 
     <CalendarView
         android:id="@+id/calendarView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:background="@color/tabTextColor"/>
+
 
     <SeekBar
         android:id="@+id/seekBar"
