--- a/Habitual/app/src/main/res/layout/add_new_log_dialog.xml
+++ b/Habitual/app/src/main/res/layout/add_new_log_dialog.xml
@@ -4,27 +4,18 @@
     android:layout_height="match_parent">
 
     <EditText
-        android:id="@+id/logTitle"
+        android:id="@+id/noteTitle"
         android:hint="Note Title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <EditText
-        android:id="@+id/logBody"
+        android:id="@+id/noteMessage"
         android:hint="Note Body"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/logTitle"
+        android:layout_below="@id/noteTitle"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"/>
-
-    <EditText
-        android:id="@+id/logDate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/logBody"
-        android:ems="10"
-        android:hint="Date"
-        android:inputType="date" />
 
 
 </RelativeLayout>
